<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart"/>

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_baseline_order_24"
        android:title="@string/orders"/>

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/maps"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_profile_24"
        android:title="@string/profile"/>

</menu>